--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -3489,7 +3489,7 @@ html .cart-added-highlight,
 .category-illustration img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: fill;
   border-radius: 0 !important;
 }
 
