--- a/asset/style/product.css
+++ b/asset/style/product.css
@@ -174,7 +174,7 @@ body {
 
 .pay {
   background-color: #9fbe1b;
-  color: white;
+  color: #000;
   padding: 5px 10px;
   border-radius: 10px;
 }
@@ -672,8 +672,7 @@ body {
 
 .pay {
   border: 1px solid #9fbe1b;
-  color: #9FBF1C;
-  background: #28a7469a !important;
+  color: #000;
   background: none !important;
 }
 
